--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": ".eslintrc.js",
   "scripts": {
     "start": "nodemon server.js",
-    "swagger-autogen": "node ./swagger.js"
+    "swagger-autogen": "node ./swagger.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
     "cors": "^2.8.5",
     "eslint": "^8.27.0",
     "eslint-config-google": "^0.14.0",
+    "jest": "^29.3.1",
     "swagger-autogen": "^2.22.0",
     "swagger-ui-express": "^4.6.0"
   }
